--- a/public/chat.html
+++ b/public/chat.html
@@ -13,13 +13,14 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+
 	<script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
 	<div class="chat-container">
 		<header class="chat-header">
-			<h1><i class="fas fa-smile"></i> Chat App</h1>
+			<p><i class="fas fa-smile"></i> Chat App</p>
 			<button id="leave-btn" class="btn">Leave Room</button>
 		</header>
 		<main class="chat-main">
